<resources>
    <string name="app_name" translatable="false">4AL2AndroidGrp2</string>

    <string name="login_title">Bienvenue !</string>
    <string name="login_subtitle">Veuillez vous connecter ou\n créer un nouveau compte\n pour utiliser l\'application.</string>
    <string name="submit_connection">Se connecter</string>
    <string name="create_account">Créer un nouveau compte</string>
    <string name="forgotten_password_login"><u>Mot de passe oublié</u></string>

    <string name="inscription_title">Inscription</string>
    <string name="inscription_informations">Veuillez saisir ces différentes informations,\n afin que vos listes soient sauvegardées.</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="verify_password">Vérification du mot de passe</string>
    <string name="password_policy">Règles du mot de passe :\n- Au moins 8 caractères\n- Au moins 1 majuscule\n- Au moins 1 minuscule\n- Au moins 1 chiffre</string>
    <string name="submit_inscription">S\'inscrire</string>

    <string name="welcome">Accueil</string>
    <string name="find_game">Rechercher un jeu…</string>
    <string name="best_sales"><u>Les meilleures ventes</u></string>
    <string name="know_more">En savoir plus</string>
    <string name="price">Prix : </string>
    <string name="free">Free</string>

    <string name="description">Description</string>
    <string name="opinion">Avis</string>
    <string name="game_details">Détail du jeu</string>

    <string name="my_likes">Mes likes</string>
    <string name="empty_likes">Vous n\'avez encore pas liké de contenu.</string>
    <string name="add_likes">Cliquez sur le coeur pour en rajouter.</string>

    <string name="forgotten_password">Mot de passe oublié</string>
    <string name="forgotten_password_informations">Veuillez saisir votre email et votre nouveau mot de passe afin de réinitialiser votre mot de passe</string>
    <string name="resend_password">Modifier mon mot de passe</string>

    <string name="search">Recherche</string>
    <string name="numbers_of_results"><u>Nombre de résultats : </u></string>

    <string name="my_wishlist">Ma liste de souhaits</string>
    <string name="empty_wishlist">Vous n\'avez pas encore ajouté de contenu.</string>
    <string name="add_wishlist">Cliquez sur l\'étoile pour en rajouter.</string>
    <string name="hint_empty_wishlist">Liste de souhait vide</string>
</resources>