<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inscription_title"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="35sp"
                android:fontFamily="@font/google_sans_bold"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/inscription_informations"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_font"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textAlignment="center"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_font"
                android:background="@drawable/text_input_background"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textAlignment="center"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_font"
                android:background="@drawable/text_input_background"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textAlignment="center"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_font"
                android:background="@drawable/text_input_background"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:hint="@string/verify_password"
                android:backgroundTint="@color/search_bar_grey"
                android:fontFamily="@font/proxima_nova_font"
                android:background="@drawable/text_input_background"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/white"
            android:text="@string/submit_inscription"
            android:textSize="17sp"
            android:fontFamily="@font/proxima_nova_font"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:layout_marginTop="75dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>