<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotten_password"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="35sp"
                android:fontFamily="@font/google_sans_bold"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/forgotten_password_informations"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_font"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:textAlignment="center"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:fontFamily="@font/proxima_nova_font"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:hint="@string/password"
                android:fontFamily="@font/proxima_nova_font"
                android:background="@drawable/edit_text_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="75dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:text="@string/resend_password"
                android:textSize="17sp"
                android:fontFamily="@font/proxima_nova_font"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:layout_marginBottom="10dp"
                android:id="@+id/btn_reset"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>