<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_grey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/search"
        android:elevation="100dp"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/close"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="90"
            android:hint="@string/find_game"
            android:padding="8dp"
            android:textColorHint="@color/grey"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:inputType="text"
            android:backgroundTint="@color/search_bar_grey"
            android:background="@drawable/rounded_bar_search"
            android:elevation="2dp"
            android:translationZ="2dp"
            android:drawableRight="@drawable/ic_baseline_search_24"
            android:id="@+id/search_bar"
            android:textColor="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbers_of_results"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/google_sans_regular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/google_sans_regular"
            android:id="@+id/nb_results"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/games_list"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />
</LinearLayout>