<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/google_sans_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/like"
                android:background="@color/background_grey"
                android:padding="16dp"
                android:id="@+id/likelist"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wishlist"
                android:background="@color/background_grey"
                android:padding="16dp"
                android:id="@+id/wishlist"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:elevation="2dp"
        android:translationZ="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="90"
            android:hint="@string/find_game"
            android:padding="8dp"
            android:textColorHint="@color/grey"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:inputType="text"
            android:backgroundTint="@color/search_bar_grey"
            android:background="@drawable/rounded_bar_search"
            android:elevation="2dp"
            android:translationZ="2dp"
            android:drawableRight="@drawable/ic_baseline_search_24" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/background_image" />
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_gravity="center|left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:textColor="@color/white"
                    android:fontFamily="@font/google_sans_bold"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:textColor="@color/white"
                    android:fontFamily="@font/google_sans_regular"
                    android:textSize="10sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/main_detail"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/know_more"
                android:backgroundTint="@color/light_purple"
                android:fontFamily="@font/proxima_nova_font"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:layout_gravity="bottom|left"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="25dp"/>

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="bottom|right"
                android:layout_margin="10dp"/>

        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_sales"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/google_sans_regular"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/games_list"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

    </LinearLayout>
    <!-- Le contenu de votre activité va ici -->

</LinearLayout>